# surgical-recap

./: .env.example  .gitignore  CHAT_README.md  CLAUDE.md  README.md  TECHNICAL_NOTES.md  requirements_definition.md  start.sh  stop.sh
.claude/: settings.local.json
backend/: .gitignore  QUICK_START.md  pyproject.toml  test_continuous_frames.py  test_dataset.py  test_evaluation.py  test_simple_image_trace.py  test_two_stage_filtering.py  test_vision.py  test_weave_evals.py  test_weave_evals_fixed.py  test_weave_evals_simple.py  test_weave_image_thumbnails.py  test_weave_images_correct.py  test_weave_with_images.py  test_weave_with_wandb_images.py
backend/app/: __init__.py  dataset.py  evaluation.py  main.py  vision.py
backend/app/analize_sequence/: DINO_README.md  __init__.py  config.py  dino_v3.py  implementation.md  models.py  pipeline.py  prompts.py  protocols.py  stage1_dino.py  stage1_dummy.py  stage2_vlm.py
backend/app/chat/: REQUIREMENTS.md  __init__.py  endpoints.py  models.py  prompts.py  service.py  session_manager.py
backend/app/frame_analysis/: __init__.py  pipeline.py  prompts.py
backend/chats/: Untitled.mp4.json  section 3.mp4.json
backend/comments/: section 3.mp4.json
backend/docs/: EVALUATION.md  STATUS.md
backend/scripts/: README.md  __init__.py  download_dataset.py  run_evaluation.sh
frontend/: CHAT_FEATURE.md  index.html  main.js  package-lock.json  package.json  styles.css  video.html  video.js
frontend/src/app/: globals.css
frontend/src/app/chat/: page.tsx
